--- a/css/screen.css
+++ b/css/screen.css
@@ -4,8 +4,11 @@
 }
 h2{
   border-style: solid;
-  border-radius: 10px;
+  border-radius: 5px;
   background: black;
+  padding: 20px;
+  height: 50px;
+  width: auto;
   color: white;
   text-align: center;
 }
