--- a/css/screen.css
+++ b/css/screen.css
@@ -13,6 +13,8 @@ h2{
   text-align: center;
   letter-spacing: 3px;
   font-size: 30px;
+  text-align: center;
+  vertical-align: middle;
 }
 body{
   background-color: #DBBEB3;
