--- a/css/screen.css
+++ b/css/screen.css
@@ -11,6 +11,10 @@
     letter-spacing: 3px;
     font-size: 30px;
   }
+  h3{
+    text-align: center;
+    font-size: 28px;
+  }
 }
 @media screen and (max-width: 992px){
   h2{
@@ -24,6 +28,10 @@
     text-align: center;
     letter-spacing: 3px;
     font-size: 28px;
+  }
+  h3{
+    text-align: center;
+    font-size: 25px;
   }
 }
 body{
