--- a/css/screen.css
+++ b/css/screen.css
@@ -15,6 +15,15 @@
     text-align: center;
     font-size: 28px;
   }
+  #c1{
+    border-style: solid;
+    border-radius: 5px;
+    background: #D0B6A3;
+    height: 40px;
+    width: 50%;
+    text-align: center;
+    font-size: 25px;
+  }
 }
 @media screen and (max-width: 992px){
   h2{
