--- a/css/screen.css
+++ b/css/screen.css
@@ -18,11 +18,11 @@
   #c1{
     border-style: solid;
     border-radius: 5px;
-    background: #D0B6A3;
-    height: 40px;
+    background: #FBEEE6;
+    height: 100px;
     width: 50%;
     text-align: center;
-    font-size: 25px;
+    font-size: 15px;
   }
 }
 @media screen and (max-width: 992px){
