--- a/css/screen.css
+++ b/css/screen.css
@@ -18,11 +18,13 @@
   #c1{
     border-style: solid;
     border-radius: 5px;
+    column-count: 1;
     background: #FBEEE6;
     height: 100px;
     width: 50%;
     text-align: center;
     font-size: 15px;
+
   }
 }
 @media screen and (max-width: 992px){
