--- a/css/screen.css
+++ b/css/screen.css
@@ -12,6 +12,7 @@
     font-size: 30px;
   }
   h3{
+    margin: 10px;
     text-align: center;
     font-size: 28px;
   }
@@ -19,7 +20,7 @@
     border-style: solid;
     border-radius: 5px;
     background: #FBEEE6;
-    height: 400px;
+    height: 250px;
     width: 50%;
     text-align: center;
     font-size: 25px;
@@ -28,8 +29,9 @@
     border-style: solid;
     border-radius: 5px;
     background: #FBEEE6;
-    height: 400px;
+    height: 250px;
     width: 50%;
+    margin: 10px;
     text-align: center;
     font-size: 25px;
   }
