--- a/css/screen.css
+++ b/css/screen.css
@@ -21,7 +21,7 @@
     border-radius: 5px;
     background: #FBEEE6;
     height: 250px;
-    width: 50%;
+    width: 250px;
     text-align: center;
     font-size: 25px;
   }
