--- a/css/screen.css
+++ b/css/screen.css
@@ -22,6 +22,7 @@
     background: #FBEEE6;
     height: 250px;
     width: 569px;
+    margin: 10px;
     text-align: center;
     font-size: 25px;
   }
@@ -31,7 +32,8 @@
     background: #FBEEE6;
     height: 250px;
     width: 569px;
-    margin: 10px;
+    margin-left: 569px;
+    margin-top: 50px;
     text-align: center;
     font-size: 25px;
   }
