movinf div again

--- a/css/screen.css
+++ b/css/screen.css
@@ -32,8 +32,8 @@
     background: #FBEEE6;
     height: 250px;
     width: 569px;
-    margin-left: 569px;
-    margin-top: 50px;
+    margin-left: 575px;
+    margin-bottom: 50px;
     text-align: center;
     font-size: 25px;
   }
