--- a/css/screen.css
+++ b/css/screen.css
@@ -54,6 +54,26 @@
     text-align: center;
     font-size: 20px;
   }
+  #c1{
+    border-style: solid;
+    border-radius: 5px;
+    background: #FBEEE6;
+    height: 250px;
+    width: 565px;
+    margin: 10px;
+    text-align: center;
+    font-size: 25px;
+  }
+  #c2{
+    border-style: solid;
+    border-radius: 5px;
+    background: #FBEEE6;
+    height: 250px;
+    width: 565px;
+    margin: 10px;
+    text-align: center;
+    font-size: 25px;
+  }
 }
 body{
   background-color: #DBBEB3;
