--- a/css/screen.css
+++ b/css/screen.css
@@ -62,7 +62,7 @@
     background: #FBEEE6;
     height: 250px;
     width: 400px;
-    margin: 10px;
+    margin: auto;
     text-align: center;
     font-size: 25px;
   }
@@ -72,7 +72,7 @@
     background: #FBEEE6;
     height: 250px;
     width: 400px;
-    margin: 10px;
+    margin: auto;
     text-align: center;
     font-size: 25px;
   }
