--- a/css/screen.css
+++ b/css/screen.css
@@ -35,7 +35,8 @@
     margin-left: 585px;
     text-align: center;
     font-size: 25px;
-    top: 50px; 
+    position: absolute;
+    top: 50px;
   }
 }
 
@@ -74,6 +75,7 @@
     height: 250px;
     width: 400px;
     margin: auto;
+    margin-top: 10px;
     text-align: center;
     font-size: 25px;
   }
