added margin top again

--- a/css/screen.css
+++ b/css/screen.css
@@ -73,6 +73,7 @@
     height: 250px;
     width: 400px;
     margin: auto;
+    margin-top: 10px;
     text-align: center;
     font-size: 25px;
   }
