--- a/css/screen.css
+++ b/css/screen.css
@@ -32,7 +32,7 @@
     background: #FBEEE6;
     height: 250px;
     width: 550px;
-    margin-left: 585px;
+    margin-right: 585px;
     text-align: center;
     font-size: 25px;
   }
