--- a/css/screen.css
+++ b/css/screen.css
@@ -77,6 +77,11 @@
     text-align: center;
     font-size: 25px;
   }
+  .c-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+  }
 }
 body{
   background-color: #DBBEB3;
