--- a/css/screen.css
+++ b/css/screen.css
@@ -77,7 +77,7 @@
     text-align: center;
     font-size: 25px;
   }
-  .c-container{
+  #c-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
