moving c1 div up

--- a/css/screen.css
+++ b/css/screen.css
@@ -23,6 +23,7 @@
     height: 250px;
     width: 550px;
     margin: 20px;
+    margin-top: 10px;
     text-align: center;
     font-size: 25px;
   }
