--- a/css/screen.css
+++ b/css/screen.css
@@ -27,7 +27,7 @@
     background: #FBEEE6;
     height: 250px;
     width: 550px;
-    margin: auto;
+    margin: 20px;
     margin-top: 0px;
     text-align: center;
     font-size: 25px;
