--- a/css/screen.css
+++ b/css/screen.css
@@ -27,7 +27,8 @@
     background: #FBEEE6;
     height: 250px;
     width: 550px;
-    margin: 25px;
+    margin: 10px;
+    margin-right: 10px;
     margin-top: 0px;
     text-align: center;
     font-size: 25px;
