chnaged from margin right to margin lefy

--- a/css/screen.css
+++ b/css/screen.css
@@ -28,7 +28,7 @@
     height: 250px;
     width: 550px;
     margin: 10px;
-    margin-right: 30px;
+    margin-left: 30px;
     margin-top: 0px;
     text-align: center;
     font-size: 25px;
