--- a/css/screen.css
+++ b/css/screen.css
@@ -32,6 +32,7 @@
     margin-top: 0px;
     text-align: center;
     font-size: 25px;
+    line-height: 1px;
   }
   #c2{
     border-style: solid;
@@ -42,6 +43,7 @@
     margin-right: 585px;
     text-align: center;
     font-size: 25px;
+    line-height: 1px;
   }
 }
 
