--- a/css/screen.css
+++ b/css/screen.css
@@ -74,6 +74,7 @@
     margin: auto;
     text-align: center;
     font-size: 23px;
+    line-height: 35px;
   }
   #c2{
     border-style: solid;
@@ -85,6 +86,7 @@
     margin-top: 10px;
     text-align: center;
     font-size: 23px;
+    line-height: 45px;
   }
   #c-container{
     display: inline;
