--- a/css/screen.css
+++ b/css/screen.css
@@ -103,6 +103,7 @@ input[type=submit] {
   border: none;
   margin: 8px 0;
   padding: 10px 16px;
+  cursor: pointer;
 }
 input[type=submit]:hover {
   background-color: lightblue;
