--- a/css/screen.css
+++ b/css/screen.css
@@ -92,7 +92,8 @@
     display: inline;
   }
   input[type=submit] {
-    padding: 9px 13px;
+    padding: 9px 10px;
+    color: black;
   }
 }
 body{
