--- a/css/screen.css
+++ b/css/screen.css
@@ -97,7 +97,7 @@ body{
   background-color: #DBBEB3;
 }
 input[type=text]:focus {
-  border: 3px solid #000000;
+  border: 3px solid;
 }
 input[type=submit] {
   width: 80%;
