--- a/css/screen.css
+++ b/css/screen.css
@@ -96,9 +96,15 @@
 body{
   background-color: #DBBEB3;
 }
+
+input[type=text]{
+  border: none;
+  border-bottom: 2px solid black;
+}
 input[type=text]:focus {
   border: 3px solid;
 }
+
 input[type=submit] {
   width: 80%;
   background-color: black;
