removing background color & adding email type to chnage

--- a/css/screen.css
+++ b/css/screen.css
@@ -97,7 +97,8 @@ body{
   background-color: #DBBEB3;
 }
 
-input[type=text]{
+input[type=text], input[type=email] {
+  background-color: none;
   border: none;
   border-bottom: 2px solid black;
 }
