--- a/css/screen.css
+++ b/css/screen.css
@@ -98,7 +98,7 @@ body{
 }
 
 input[type=text], input[type=email] {
-  background-color: none;
+  background-color: clear;
   border: none;
   border-bottom: 2px solid black;
 }
