--- a/css/screen.css
+++ b/css/screen.css
@@ -65,6 +65,11 @@
     text-align: center;
     font-size: 20px;
   }
+  button{
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;
+  }
   #c1{
     border-style: solid;
     border-radius: 5px;
