moving button around

--- a/css/screen.css
+++ b/css/screen.css
@@ -69,6 +69,7 @@
     background-color: white;
     color: black;
     border: 2px solid #555555;
+    margin: 30px;
   }
   #c1{
     border-style: solid;
