--- a/css/screen.css
+++ b/css/screen.css
@@ -66,10 +66,14 @@
     font-size: 20px;
   }
   button{
-    background-color: white;
+    background-color: #FBEEE6;
     color: black;
-    border: 2px solid #555555;
-    margin: 30px;
+    width: 40%;
+    border-radius: 4px;
+    border: none;
+    margin: 7px 0;
+    padding: 10px 16px;
+
   }
   #c1{
     border-style: solid;
