--- a/css/screen.css
+++ b/css/screen.css
@@ -71,7 +71,7 @@
     width: 40%;
     border-radius: 4px;
     border: none;
-    margin: 7px 0;
+    margin-left: 40px;
     padding: 10px 16px;
 
   }
