--- a/css/screen.css
+++ b/css/screen.css
@@ -16,6 +16,15 @@
     text-align: center;
     font-size: 28px;
   }
+  button{
+    background-color: #FBEEE6;
+    color: black;
+    width: 40%;
+    border-radius: 4px;
+    border: none;
+    margin-left: 175px;
+    padding: 10px 16px;
+  }
   #c-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -73,8 +82,8 @@
     border: none;
     margin-left: 175px;
     padding: 10px 16px;
-
   }
+
   #c1{
     border-style: solid;
     border-radius: 5px;
