--- a/css/screen.css
+++ b/css/screen.css
@@ -24,6 +24,7 @@
     border: none;
     margin-left: 420px;
     padding: 10px 16px;
+    font-size: 28px;
   }
   #c-container{
     display: grid;
