--- a/css/screen.css
+++ b/css/screen.css
@@ -57,7 +57,7 @@
 }
 
 
-@media screen and (mix-width: 768px){
+@media screen and (min-width: 768px){
   h2{
     border-style: solid;
     border-radius: 5px;
