--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,34 @@
+body{
+  background-color: #DBBEB3;
+}
+@font-face {
+  font-family: sans-serif;
+  src: url('OstrichSansMedium-Rjqv.ttf') format ('truetype');
+}
+input[type=text], input[type=email] {
+  background-color: #FBEEE6;
+  color: black;
+  border: none;
+  border-bottom: 2px solid black;
+}
+input[type=text]:focus {
+  border: 3px solid;
+}
+
+input[type=submit] {
+  width: 80%;
+  background-color: black;
+  color: white;
+  border-radius: 4px;
+  border: none;
+  margin: 7px 0;
+  padding: 10px 16px;
+  cursor: pointer;
+}
+input[type=submit]:hover {
+  background-color: lightblue;
+}
+
 @media screen and (min-width: 480px){
   h2{
     border-style: solid;
@@ -113,32 +144,4 @@
   #c-container{
     display: inline;
   }
-}
-
-body{
-  background-color: #DBBEB3;
-}
-
-input[type=text], input[type=email] {
-  background-color: #FBEEE6;
-  color: black;
-  border: none;
-  border-bottom: 2px solid black;
-}
-input[type=text]:focus {
-  border: 3px solid;
-}
-
-input[type=submit] {
-  width: 80%;
-  background-color: black;
-  color: white;
-  border-radius: 4px;
-  border: none;
-  margin: 7px 0;
-  padding: 10px 16px;
-  cursor: pointer;
-}
-input[type=submit]:hover {
-  background-color: lightblue;
 }
