--- a/css/screen.css
+++ b/css/screen.css
@@ -37,6 +37,7 @@ input[type=submit]:hover {
     text-align: center;
     letter-spacing: 3px;
     font-family: 'News Cycle', sans-serif;
+    font-weight: 400px;
     font-size: 32px;
   }
   h3{
