trying to get the font to show up

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,6 +1,6 @@
 body{
   background-color: #DBBEB3;
-  
+  font-family: 'Playfair Display', serif;
 }
 input[type=text], input[type=email] {
   background-color: #FBEEE6;
