--- a/css/screen.css
+++ b/css/screen.css
@@ -87,6 +87,7 @@ input[type=submit]:hover {
 
 @media screen and (max-width: 992px){
   h2{
+    font-family: 'Playfair Display', serif;
     border-style: solid;
     border-radius: 5px;
     background: black;
