--- a/css/screen.css
+++ b/css/screen.css
@@ -46,6 +46,7 @@ input[type=submit]:hover {
   }
   button{
     font-family: 'Playfair Display', serif;
+    font-size: 25px;
     background-color: #FBEEE6;
     color: black;
     width: 30%;
