--- a/css/screen.css
+++ b/css/screen.css
@@ -37,6 +37,7 @@ input[type=submit]:hover {
     color: white;
     text-align: center;
     letter-spacing: 3px;
+    font-family: 'Cardo', serif;
     font-size: 34px;
   }
   h3{
