--- a/css/screen.css
+++ b/css/screen.css
@@ -25,6 +25,7 @@ input[type=submit] {
   margin: 7px 0;
   padding: 10px 16px;
   cursor: pointer;
+  font-size: 28px;
   font-family: 'Fjalla One', sans-serif;
   letter-spacing: 4px;
 }
